# lddcollect

./: README.rst  mypy.ini  setup.cfg
.github/workflows/: pythonpackage.yml  release.yml
lddcollect/: __init__.py  __main__.py
tests/: test_dpkg_s.py
