[metadata]
name = lddcollect
version = 0.0.1

description = List files/debian packages used by a Linux binary/dll
long_description = file: README.rst
long_description_content_type = text/x-rst
home-page = https://github.com/kirill888/lddcollect
author = Kirill Kouzoubov
author-email = kirill888@gmail.com
keywords = ldd, elf
license = MIT License
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.5
packages = lddcollect
install_requires =
    click
    auditwheel

setup_requires =
    setuptools

tests_require =
    pytest

[options.extras_require]
dev =
  wheel

[bdist_wheel]
universal = true

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/