[metadata]
name = lddcollect
version = 0.2.0b1

description = List files/debian packages used by a Linux binary/dll
long_description = file: README.rst
long_description_content_type = text/x-rst
home-page = https://github.com/kirill888/lddcollect
author = Kirill Kouzoubov
author-email = kirill888@gmail.com
keywords = ldd, elf
license = MIT License
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = find:
install_requires =
    click
    pyelftools >= 0.24

setup_requires =
    setuptools

[options.extras_require]
dev =
  wheel
test =
  pytest

[bdist_wheel]
universal = true

[flake8]
max-line-length = 127
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/